@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.1727 2023/07/09 09:53:53 nia Exp $
+# $NetBSD: Makefile,v 1.1728 2023/07/13 09:39:10 wiz Exp $
 #
 
 COMMENT=	Packages related to the World Wide Web
@@ -692,7 +692,6 @@ SUBDIR+=	py-django-admin-rangefilter
 SUBDIR+=	py-django-admin-sortable2
 SUBDIR+=	py-django-allauth
 SUBDIR+=	py-django-appconf
-SUBDIR+=	py-django-appmedia
 SUBDIR+=	py-django-binary-database-files
 SUBDIR+=	py-django-celery-beat
 SUBDIR+=	py-django-classy-tags
