@@ -1,39 +1,0 @@
-@comment $NetBSD: PLIST,v 1.1.1.1 2011/02/17 18:07:29 adam Exp $
-${PYSITELIB}/${EGG_INFODIR}/PKG-INFO
-${PYSITELIB}/${EGG_INFODIR}/SOURCES.txt
-${PYSITELIB}/${EGG_INFODIR}/dependency_links.txt
-${PYSITELIB}/${EGG_INFODIR}/not-zip-safe
-${PYSITELIB}/${EGG_INFODIR}/top_level.txt
-${PYSITELIB}/appmedia/BeautifulSoup.py
-${PYSITELIB}/appmedia/BeautifulSoup.pyc
-${PYSITELIB}/appmedia/BeautifulSoup.pyo
-${PYSITELIB}/appmedia/__init__.py
-${PYSITELIB}/appmedia/__init__.pyc
-${PYSITELIB}/appmedia/__init__.pyo
-${PYSITELIB}/appmedia/api.py
-${PYSITELIB}/appmedia/api.pyc
-${PYSITELIB}/appmedia/api.pyo
-${PYSITELIB}/appmedia/management/__init__.py
-${PYSITELIB}/appmedia/management/__init__.pyc
-${PYSITELIB}/appmedia/management/__init__.pyo
-${PYSITELIB}/appmedia/management/commands/__init__.py
-${PYSITELIB}/appmedia/management/commands/__init__.pyc
-${PYSITELIB}/appmedia/management/commands/__init__.pyo
-${PYSITELIB}/appmedia/management/commands/buildmedia.py
-${PYSITELIB}/appmedia/management/commands/buildmedia.pyc
-${PYSITELIB}/appmedia/management/commands/buildmedia.pyo
-${PYSITELIB}/appmedia/management/commands/symlinkmedia.py
-${PYSITELIB}/appmedia/management/commands/symlinkmedia.pyc
-${PYSITELIB}/appmedia/management/commands/symlinkmedia.pyo
-${PYSITELIB}/appmedia/middleware.py
-${PYSITELIB}/appmedia/middleware.pyc
-${PYSITELIB}/appmedia/middleware.pyo
-${PYSITELIB}/appmedia/models.py
-${PYSITELIB}/appmedia/models.pyc
-${PYSITELIB}/appmedia/models.pyo
-${PYSITELIB}/appmedia/urls.py
-${PYSITELIB}/appmedia/urls.pyc
-${PYSITELIB}/appmedia/urls.pyo
-${PYSITELIB}/appmedia/views.py
-${PYSITELIB}/appmedia/views.pyc
-${PYSITELIB}/appmedia/views.pyo
