@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:30:30 nia Exp $
-
-BLAKE2s (django-appmedia-1.0.1.tar.gz) = 001b46593ebe0bd726223d667512ad82cd890cfa9f611af6595deb6f4299a40a
-SHA512 (django-appmedia-1.0.1.tar.gz) = 0b8e2edc19fc66574bdb34abac591802afde56da3b0fd956fecd2bf5fd5d6cf7183a74f1b2505f3fbd46387f0f40e10cd3cf1594005d731d2e95a9ecf3d0d846
-Size (django-appmedia-1.0.1.tar.gz) = 25263 bytes
