@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2023,v 1.4388 2023/07/13 07:30:36 adam Exp $
+$NetBSD: CHANGES-2023,v 1.4389 2023/07/13 09:39:10 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2023:
 
@@ -6115,3 +6115,4 @@ Changes to the packages collection and infrastructure in 2023:
 	Updated audio/termusic to 0.7.11 [pin 2023-07-12]
 	Updated converters/py-reedsolo to 1.7.0 [adam 2023-07-13]
 	Updated net/py-onionbalance to 0.2.1 [adam 2023-07-13]
+	Removed www/py-django-appmedia [wiz 2023-07-13]
